added two more classes with views and added buttons to navigate to each each page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">GFTastyNoms</string>
     <string name="find_tasty_gf_noms">Find Tasty GF Noms</string>
-    <string name="go_to_all_tasty_noms">Go To All Tasty Noms</string>
+    <string name="go_to_all_tasty_noms">All GF Tasty Nom Places</string>
+    <string name="add_new_gf_tasty_nom_place">Add New GF Tasty Nom Place</string>
+    <string name="all_tasty_noms">All Tasty Noms</string>
+    <string name="home">Home</string>
 </resources>
