user can select an image on their phone and see it on on the add GFTastyNom Place view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="gf_tasty_nom_address">GF Tasty Nom Address</string>
     <string name="business_address">Business Address</string>
     <string name="add">Add</string>
+    <string name="select_image">Select Image</string>
 </resources>
