--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">GFTastyNoms</string>
     <string name="find_tasty_gf_noms">Find Tasty GF Noms</string>
     <string name="go_to_all_tasty_noms">All GF Tasty Nom Places</string>
-    <string name="add_new_gf_tasty_nom_place">Add New GF Tasty Nom Place</string>
+    <string name="add_new_gf_tasty_nom_place">Add New Place</string>
     <string name="all_tasty_noms">All Tasty Noms</string>
     <string name="home">Home</string>
     <string name="all_gf_nom_places">All GF Nom Places</string>
